# EA_Sports_FC_26_Discord_Bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .slugignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  MANIFEST.in  PRIVACY_POLICY.md  Procfile  README.md  SECURITY.md  TERMS_OF_SERVICE.md  VERSION  database.py  discord_layout_github_issues.md  futwiz_player_evolution_github_issues.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
cogs/: __init__.py  admin_portal.py  coach_portal.py  config.py  dev.py  help.py  me.py  roster.py  rules.py  setup_channels.py  staff.py  tournament.py
config/: __init__.py  constants.py  settings.py
docs/: billing.md  ci.md  commands.md  data-lifecycle.md  disaster-recovery.md  faq.md  fc25-stats-policy.md  monitoring.md  product-copy.md  qa-checklist.md  release-playbook.md  server-setup-checklist.md
interactions/: __init__.py  admin_portal.py  club_embeds.py  club_portal.py  club_posts.py  coach_portal.py  dashboard.py  fc25_stats_modals.py  listing_instructions.py  manager_portal.py  modals.py  premium_coaches_report.py  recruit_availability.py  recruit_embeds.py  recruit_portal.py  recruit_posts.py  roster_embeds.py  views.py
locales/: en.json
migrations/: __init__.py
offside_bot/: __init__.py  __main__.py  dashboard.py  web_templates.py
repositories/: __init__.py  tournament_repo.py
scripts/: check_a11y_templates.py  check_log_hygiene.py  check_release_metadata.py  deploy_heroku.py  dev_watch.py  export_guild_data.py  migrate.py  (+8 more)
(+151 files in other folders)
