[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offside-bot"
dynamic = ["version"]
description = "Offside Discord bot"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools]
py-modules = ["database"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cogs*",
  "config*",
  "interactions*",
  "migrations*",
  "offside_bot*",
  "repositories*",
  "services*",
  "utils*",
]
exclude = ["docs*", "scripts*", "tests*"]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = ["scripts/export_members.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
allow_redefinition = true
show_error_codes = true
exclude = ["tests/.*", "scripts/.*"]
